--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@
 	padding-right: 100px;
 }
 
+#country_detail{
+	font-family: Geliat;
+	font-size: 18pt;
+}
+
 #label{
 	font-size: 30pt;
 	font-family: Geliat;
@@ -29,6 +34,15 @@
 	font-family: Geliat;
 	text-align: center;
 	font-weight: bold;
+	color: #629e9c;
+}
+
+#region{
+	font-size: 28pt;
+	font-family: Geliat;
+	text-align: center;
+	font-weight: bold;
+	color: #217572;
 }
 
 #scatterplot{
